--- a/src/components/atoms/Typography/typography.module.scss
+++ b/src/components/atoms/Typography/typography.module.scss
@@ -1,5 +1,6 @@
 @import "../../../assets/scss/settings";
 
+
 /* --------------------------------------------------
 	1.0 Typography
 -------------------------------------------------- */
@@ -18,8 +19,6 @@ mark {
   color: $white;
   background: $highlight-text-bg;
 }
-
-
 
 /* ---- 1.1 Text ---- */
 body {
@@ -42,7 +41,6 @@ body {
 	text-transform: uppercase;
 }
 
-
 .dropcaps {
 	&:first-child {
 
@@ -56,8 +54,6 @@ body {
 		}
 	}
 }
-
-
 
 /* ---- 1.2 Headings ---- */
 .h1 {
@@ -95,7 +91,14 @@ body {
 	font-weight: 300;
 }
 
-
+.subheading {
+  display: block;
+  text-transform: uppercase;
+  font-family: $alt-heading-font;
+  font-weight: 300;
+  color: $gray-light;
+  letter-spacing: 2.5px;
+}
 
 /* ---- 1.3 Links ---- */
 a {
