--- a/src/components/atoms/Typography/typography.module.scss
+++ b/src/components/atoms/Typography/typography.module.scss
@@ -30,12 +30,12 @@ body {
 	color: $body-text-color;
 }
 
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	font-family: $heading-font;
 	color: $heading-text-color;
 	text-transform: uppercase;
