--- a/src/assets/scss/_counters.scss
+++ b/src/assets/scss/_counters.scss
@@ -59,7 +59,7 @@
 /* ---- 10.2 Counters - Numbers ---- */
 .number-counters {
 	position: relative;
-	background: url(../../assets/images/mac-coffe-photo.jpg);
+	background: url(/static/assets/images/mac-coffe-photo.jpg);
 	background-size: cover;
 	background-position: 50%;
 	background-attachment: fixed;
