--- a/src/assets/scss/_hero.scss
+++ b/src/assets/scss/_hero.scss
@@ -557,7 +557,7 @@
 				font-size: $heading-base-size;
 				color: $white;
 				line-height: $line-hight - .3;
-				font-weight: $heading-weight;
+				font-weight: 500;
 			}
 
 			.hero-subheading {
