--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -135,3 +135,5 @@ $screen-sm: 770px;
 $screen-md: 992px;
 $screen-lg: 1260px;
 $screen-xlg: 1440px;
+
+$icon-font-path: "/node_modules/bootstrap-sass";
