--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -212,4 +212,4 @@ _____________________________________________________
 @import "hover-effects";
 @import "shop";
 @import "tables";
-@import "bootstrap.scss";
+@import '../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
