resturcture app and css

--- a/src/assets/scss/_counters.scss
+++ b/src/assets/scss/_counters.scss
@@ -7,7 +7,7 @@
 /* ---- 10.1 Circle Counters ---- */
 .circles-counters {
 	position: relative;
-	background: #ccc url(../../assets/images/sea-1.jpg);
+	/* background: #ccc url(../../assets/images/sea-1.jpg); */
 	background-size: cover;
 	background-attachment: fixed;
 
