--- a/src/assets/scss/_cta.scss
+++ b/src/assets/scss/_cta.scss
@@ -6,7 +6,7 @@
 
 /* ---- 17.1 CTA - Link ---- */
 .cta-link {
-	background: url(../../assets/images/shattered.gif) repeat;
+	/* background: url(../../assets/images/shattered.gif) repeat; */
 
 	.bg-overlay {
 		width: 100%;
@@ -48,7 +48,7 @@
 
 /* ---- 17.2 CTA - Newsletter Signup ---- */
 .cta-newsletter {
-	background: url(../../assets/images/shattered.gif) repeat;
+	/* background: url(../../assets/images/shattered.gif) repeat; */
 
 	.bg-overlay {
 		width: 100%;
