--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -204,7 +204,7 @@ _____________________________________________________
 @import "contact";
 @import "login";
 @import "comingsoon";
-@import "404-page";
+@import "404";
 @import "maintenance-page";
 @import "line-icons-page";
 @import "hero";
@@ -212,4 +212,3 @@ _____________________________________________________
 @import "hover-effects";
 @import "shop";
 @import "tables";
-@import '../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
