added feature and responsive design

--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -213,3 +213,4 @@ _____________________________________________________
 @import "shop";
 @import "tables";
 @import '../../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
+@import "responsive.scss";
